[frontend] Improve note rendering at small widths Fix single note view alignment issues

--- a/Iceshrimp.Frontend/Components/AscendedNote.razor.css
+++ b/Iceshrimp.Frontend/Components/AscendedNote.razor.css
@@ -15,7 +15,6 @@
 .note-container {
     display: flex;
     max-width: 45rem;
-    min-width: 25rem;
     width: 100%;
 }
 .pad {
