--- a/Iceshrimp.Frontend/Components/RecursiveNote.razor.css
+++ b/Iceshrimp.Frontend/Components/RecursiveNote.razor.css
@@ -20,9 +20,8 @@
 }
 .root-note {
     max-width: 45rem;
-    /*min-width: 25rem;*/
     background-color: var(--foreground-color);
-    padding: 1.25rem 1.5rem 1rem; /* top, left-right, bottom*/
+    padding: 1.25rem 0 1rem; /* top, left-right, bottom*/
     @media (max-width: 1000px) {
         padding: 1.25rem 1rem 1rem;
     }
