--- a/Iceshrimp.Frontend/Components/TimelineNote.razor.css
+++ b/Iceshrimp.Frontend/Components/TimelineNote.razor.css
@@ -1,6 +1,5 @@
 .note-container {
     max-width: 45rem;
-    min-width: 20rem;
     background-color: var(--foreground-color);
     padding: 1.5rem 1.5rem 1rem; /* top, left-right, bottom*/
     @media (max-width: 1000px) {
