--- a/Iceshrimp.Frontend/Pages/SingleNote.razor.css
+++ b/Iceshrimp.Frontend/Pages/SingleNote.razor.css
@@ -5,8 +5,6 @@
     width: 100%;
     padding-bottom: 1rem;
     border-bottom: solid var(--highlight-color) 0.1rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
 }
 .scroller {
     height: 100vh;
@@ -21,20 +19,18 @@
 }
 
 .wrapper {
-    background-color: var(--foreground-color);
-    border-radius: 0.75rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    padding-top: 1.5rem;
-    padding-bottom: 1rem;
+    
     display: flex;
     flex-direction: column;
-    margin-left: 1rem;
-    margin-right: 1rem;
     align-items: center;
 
 }
+.container {
+    background-color: var(--foreground-color);
+    border-radius: 0.75rem;
+    padding: 1.5rem 1.5rem 1rem;
+    margin: 1.5rem 1rem 2rem;
+
+}
 .ascendants {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
 }
